// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<form>
  <div
    className="row"
  >
    <div
      className="col-2"
    >
      <label
        className="btn btn-dark btn-block rounded py-3 px-4 m-0 false "
      >
        <input
          checked={false}
          className="d-none form-check-input"
          name="bundle"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="radio"
          value={100}
        />
        <div
          className="text-center"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-dollar-sign fa-w-9 text-primary my-auto"
            data-icon="dollar-sign"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 288 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <span>
            100.00
          </span>
        </div>
      </label>
    </div>
  </div>
</form>
`;

exports[`renders without crashing 2`] = `
<form>
  <div
    className="row"
  >
    <div
      className="col-2"
    >
      <label
        className="btn btn-dark btn-block rounded py-3 px-4 m-0 active "
      >
        <input
          checked={true}
          className="d-none form-check-input"
          name="bundle"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="radio"
          value={100}
        />
        <div
          className="text-center"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-gg fa-w-16 text-primary my-auto"
            data-icon="gg"
            data-prefix="fab"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M179.2 230.4l102.4 102.4-102.4 102.4L0 256 179.2 76.8l44.8 44.8-25.6 25.6-19.2-19.2-128 128 128 128 51.5-51.5-77.1-76.5 25.6-25.6zM332.8 76.8L230.4 179.2l102.4 102.4 25.6-25.6-77.1-76.5 51.5-51.5 128 128-128 128-19.2-19.2-25.6 25.6 44.8 44.8L512 256 332.8 76.8z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <span>
            100
          </span>
        </div>
      </label>
    </div>
  </div>
</form>
`;
